# aiformula

./: .README.md.swp  .gitignore  .gitmodules  LICENSE  README.md  install.sh  rosbag_qos_profile.yaml  save_img.py  wiring.drawio
chassis_driver/: CMakeLists.txt  package.xml
chassis_driver/chassis_driver/: CMakeLists.txt  package.xml
chassis_driver/chassis_driver/src/: chassis_driver_node.cpp  debug_printer.cpp  velplanner.cpp
chassis_driver/include/base/: velplanner.hpp
chassis_driver/include/chassis_driver/: caster_sim_node.hpp  chassis_driver_node.hpp  visibility_control.h
chassis_driver/launch/: caster_sim.launch.py
chassis_driver/src/: caster_sample_collector_sim.cpp  caster_sim.cpp  chassis_driver_node.cpp  debug_printer.cpp
chassis_driver/steered_drive_msg/: CMakeLists.txt  package.xml
chassis_driver/steered_drive_msg/msg/: SteeredDrive.msg
chassis_driver/weights/: predict.pt  rl_model.pt
controller/: CMakeLists.txt  package.xml
controller/include/controller/: controller_node.hpp  visibility_control.h
controller/src/: controller_node.cpp
cybergear_interface/: CMakeLists.txt  package.xml
cybergear_interface/include/cybergear_interface/: cybergear_defs.h  cybergear_interface_node.hpp  driver.hpp  visibility_control.h
cybergear_interface/src/: cybergear_interface_node.cpp  driver.cpp
e2e_planner/: package.xml  setup.cfg  setup.py
e2e_planner/config/: train.yaml  train_classifier.yaml
e2e_planner/config/topomap/: topomap.yaml
e2e_planner/e2e_planner/: image_binarizer_node.py  inference_node.py  inference_node_sim.py  topo_nav_node_sim.py  zed_sdk.py
e2e_planner/e2e_planner/placenav/: place_recognition.py  topomap.py
e2e_planner/e2e_planner/util/: preprocessing.py  slit_aug.py  yolop_processor.py
e2e_planner/launch/: data_collector.launch.py  e2e_planner.launch.py  simulation_mission.launch.py  topo_nav.launch.py
e2e_planner/scripts/: __init__.py  binarize_dataset.py  build_topo_map.py  compute_waypoints.py  create_data.py  create_topomap.py  data_collector.py  data_collector_sim.py  network.py  train.py  train_classifier.py
e2e_planner/weights/: e2e_model.pt
frenet_planner/: CMakeLists.txt  package.xml
frenet_planner/src/: frenet_planner.cpp  frenet_planner_node.cpp  obstacle_detect.cpp  reference_curve.cpp  risk_calculator.cpp
gemini_cmd_vel/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
gemini_cmd_vel/gemini_cmd_vel/: gemini_controller_node.py  gemini_live_controller_box_node.py  gemini_live_controller_node.py  gemini_live_controller_node_birdseye.py  gemini_live_controller_node_ten_frames.py  gemini_vla_node.py
gemini_cmd_vel/launch/: gemini_er_launch.py
gnss_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
gnss_navigation/gnss_navigation/: gnss_path_follower.cpp  gnss_path_publisher.cpp  gnss_path_publisher.py  hoge.py
gnss_navigation/launch/: ekf.launch.py  gnss_navigation.launch.py  gnss_path_publish.launch.py
gnss_navigation/src/: gnss_path_publisher.cpp
gnss_navigation_old/: CMakeLists.txt
gnss_navigation_old/config/: bringup_vectornav.sh
gnss_navigation_old/src/: gnss_path_follower.cpp  gnss_path_publisher.cpp
gnssnav/: CMakeLists.txt  package.xml
gnssnav/src/: follower_node.cpp  odom_follower_node.cpp  path_publisher_node.cpp  test_follower_node.cpp  vectornav_debug.cpp
imagenav/: CMakeLists.txt  package.xml
imagenav/src/: debug_camera.cpp  imagenav_node.cpp  line_detector.cpp  obstacle_detector.cpp
line_publisher/: CMakeLists.txt  package.xml
line_publisher/src/: line_publisher_node.cpp
localization/: CMakeLists.txt  package.xml
localization/src/: ekf_localizer.cpp  icp_matching.cpp  lane_pixel_to_point.cpp  localization_node.cpp  map_odom_tf_node.cpp  odom_tf_node.cpp
main_executor/: CMakeLists.txt  package.xml
main_executor/config/: main_params.yaml
main_executor/launch/: main_exec.launch.py  main_sim_exec.launch.py  odrive_can_launch.yaml
main_executor/src/: main.cpp  main_sim.cpp
mapless_planning_msgs/: CMakeLists.txt  package.xml
mapless_planning_msgs/msg/: DrivingCorridor.msg  LocalMap.msg  Mission.msg  MissionLanesStamped.msg  Segment.msg  SegmentConnection.msg
mapping/vectormap_msgs/: CMakeLists.txt  package.xml
mapping/vectormap_server/: CMakeLists.txt  package.xml
motion_control/: CMakeLists.txt  package.xml  plugins.xml
motion_control/src/: controller_server.cpp
odometry_publisher/: CMakeLists.txt  package.xml
odometry_publisher/include/: common.hpp  gyro_odometry.hpp  wheel_odometry.hpp
odometry_publisher/launch/: both.launch.py  wheel_odometry.launch.py
odometry_publisher/src/: common.cpp
path_tracker/: CMakeLists.txt  README.md  package.xml
path_tracker/launch/: mpc_node.launch.py  mpc_node_sim.launch.py  pure_pursuit_sim.launch.py
path_tracker/scripts/: compare_mpc.py  diag_topics.py  estimate_gains.py  estimate_params.py  evaluate_model.py  evaluate_model_gein_tuning.py  evaluate_tracking.py  extract_path_from_bag.py  generate_test_path.py  model_check.py  path_plotter.py  publish_path_from_csv.py  test_path.csv
path_tracker/src/: casadi_solver.cpp  mpc_node.cpp  mpc_node.keep.cpp  mpc_node_sim.cpp  pure_pursuit_global_node.cpp  pure_pursuit_node.cpp  pure_pursuit_sim_main.cpp
path_tracker/test/: test.py
utilities/: CMakeLists.txt  package.xml
utilities/src/: utils.cpp  velplanner.cpp
vectormap_control/: CMakeLists.txt  package.xml  plugins.xml
vectormap_control/src/: vectormap_controller_server.cpp  vectormap_pure_pursuit_node.cpp
vectormap_localization/: CMakeLists.txt  package.xml
vectormap_localization/src/: ekf_localizer.cpp  icp_matching.cpp  lane_pixel_to_point.cpp  map_odom_tf_node.cpp  odom_tf_node.cpp  vectormap_localization_node.cpp
vectormap_localization/vectormap_matching/: CMakeLists.txt  package.xml
visual_odometry/: CMakeLists.txt  package.xml
visual_odometry/include/: vo_path_publisher_node.hpp
visual_odometry/scripts/: vo_to_csv.py
visual_odometry/src/: .vo_path_publisher_node.cpp.swp  shihou_vo.csv  vo_follower_node.cpp  vo_path_publisher_node.cpp  vo_to_csv.py
(+461 files in other folders)
