[metadata]
name = e2e_planner
version = 0.0.1
maintainer = kyo yamashita
maintainer_email = s21c1135sc@s.chibakoudai.jp
description = End-to-end learning path planner

[options]
zip_safe = True
packages = find:
install_requires =
    setuptools

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts =
    inference_node = e2e_planner.inference_node:main

[develop]
script_dir=$base/lib/e2e_planner
[install]
install_scripts=$base/lib/e2e_planner
